--- a/apps/astro/src/global/global.scss
+++ b/apps/astro/src/global/global.scss
@@ -210,6 +210,16 @@ h1,
 .h1 {
   font-size: clamp(calc(42rem / 16), calc(64vw / 7.68), calc(64rem / 16));
 }
+h1,
+.h1,
+h2,
+.h2 {
+  &::before {
+    content: '// ';
+    color: var(--primary-500, #dbb039);
+    font-size: 0.875em;
+  }
+}
 h2,
 .h2,
 h3,
