update ContactForm section

--- a/apps/astro/src/components/global/BenefitsGrid.astro
+++ b/apps/astro/src/components/global/BenefitsGrid.astro
@@ -2,7 +2,7 @@
 import PortableText, { PortableTextQuery, type PortableTextValue } from '@components/ui/portable-text'
 
 export const BenefitsGrid_Query = `
-  {
+  _type == "BenefitsGrid" => {
     ${PortableTextQuery('heading')}
     ${PortableTextQuery('subheading')}
     benefits[] {
