--- a/apps/astro/src/components/ui/Button/styles.module.scss
+++ b/apps/astro/src/components/ui/Button/styles.module.scss
@@ -57,7 +57,7 @@
   .button {
     &[data-theme='primary'] {
       &::before {
-        background-color: var(--primary-100, #edebe7);
+        background-color: var(--primary-100, #fbf6e9);
       }
     }
   }
