--- a/apps/astro/src/components/Components.astro
+++ b/apps/astro/src/components/Components.astro
@@ -51,19 +51,19 @@ export const Components_Query = /* groq */ `
   components[] {
     _type,
     sectionId,
-    _type == "LandingFeature" => ${LandingFeature_Query}
-    _type == "FullWidthPhoto" => ${FullWidthPhoto_Query}
-    _type == "BenefitsGrid" => ${BenefitsGrid_Query}
-    _type == "ImagedBenefitsSection" => ${ImagedBenefitsSection_Query}
-    _type == "MetricsHighlightSection" => ${MetricsHighlightSection_Query}
-    _type == "BenefitsWithImage" => ${BenefitsWithImage_Query}
-    _type == "BenefitsNumberedGrid" => ${BenefitsNumberedGrid_Query}
-    _type == "GridShowcaseSection" => ${GridShowcaseSection_Query}
-    _type == "Faq" => ${Faq_Query}
-    _type == "ProcessAccordion" => ${ProcessAccordion_Query}
-    _type == "TestimonialSection" => ${TestimonialSection_Query}
-    _type == "Newsletter" => ${Newsletter_Query}
-    _type == "ContactForm" => ${ContactForm_Query}
+    ${LandingFeature_Query}
+    ${FullWidthPhoto_Query}
+    ${BenefitsGrid_Query}
+    ${ImagedBenefitsSection_Query}
+    ${MetricsHighlightSection_Query}
+    ${BenefitsWithImage_Query}
+    ${BenefitsNumberedGrid_Query}
+    ${GridShowcaseSection_Query}
+    ${Faq_Query}
+    ${ProcessAccordion_Query}
+    ${TestimonialSection_Query}
+    ${Newsletter_Query}
+    ${ContactForm_Query}
   },
 `
 ---
