--- a/apps/astro/src/components/global/BenefitsWithImage.astro
+++ b/apps/astro/src/components/global/BenefitsWithImage.astro
@@ -4,7 +4,7 @@ import Button, { ButtonDataQuery, type ButtonDataProps } from '@components/ui/Bu
 import Image, { ImageDataQuery, type ImageDataProps } from '@components/ui/image'
 
 export const BenefitsWithImage_Query = `
-  {
+  _type == "BenefitsWithImage" => {
     ${PortableTextQuery('heading')}
     ${PortableTextQuery('paragraph')}
     ${ButtonDataQuery('cta')}
