--- a/apps/astro/src/components/global/GridShowcaseSection.astro
+++ b/apps/astro/src/components/global/GridShowcaseSection.astro
@@ -3,7 +3,7 @@ import PortableText, { PortableTextQuery, type PortableTextValue } from '@compon
 import Image, { ImageDataQuery, type ImageDataProps } from '@components/ui/image'
 
 export const GridShowcaseSection_Query = `
-  {
+  _type == "GridShowcaseSection" => {
     ${PortableTextQuery('heading')}
     ${PortableTextQuery('paragraph')}
     items[] {
