--- a/apps/astro/src/components/global/ImagedBenefitsSection.astro
+++ b/apps/astro/src/components/global/ImagedBenefitsSection.astro
@@ -4,7 +4,7 @@ import Button, { ButtonDataQuery, type ButtonDataProps } from '@components/ui/Bu
 import Image, { ImageDataQuery, type ImageDataProps } from '@components/ui/image'
 
 export const ImagedBenefitsSection_Query = `
-  {
+  _type == "ImagedBenefitsSection" => {
     isReversed,
     ${PortableTextQuery('heading')}
     ${PortableTextQuery('paragraph')}
