--- a/apps/astro/src/global/global.scss
+++ b/apps/astro/src/global/global.scss
@@ -34,7 +34,7 @@
   --neutral-700: #222222;
   --neutral-900: #171717;
 
-  --primary-100: #edebe7;
+  --primary-100: #fbf6e9;
   --primary-300: #ffe6a2;
   --primary-400: #f4cb5b;
   --primary-500: #dbb039;
@@ -55,7 +55,7 @@
 }
 
 [light-background] {
-  background-color: var(--primary-100, #edebe7);
+  background-color: var(--primary-100, #fbf6e9);
   color: var(--neutral-700, #222);
   --neutral-000: #fcfcfc;
   --neutral-100: #3b3b3b;
@@ -66,7 +66,7 @@
   --neutral-700: #222222;
   --neutral-900: #171717;
 
-  --primary-100: #edebe7;
+  --primary-100: #fbf6e9;
   --primary-300: #ffe6a2;
   --primary-400: #f4cb5b;
   --primary-500: #dbb039;
