--- a/apps/astro/src/components/global/ImagedBenefitsSection.astro
+++ b/apps/astro/src/components/global/ImagedBenefitsSection.astro
@@ -91,7 +91,7 @@ const { index, sectionId, isReversed, heading, paragraph, cta, benefits } = Astr
     .item {
       position: sticky;
       top: 0;
-      background: var(--neutral-700, #222);
+      background-color: var(--neutral-600, #252423);
       margin: 0 calc(var(--page-margin) * -1);
       padding: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(48rem / 16)) var(--page-margin);
       display: grid;
