--- a/apps/astro/src/components/ui/Button/styles.module.scss
+++ b/apps/astro/src/components/ui/Button/styles.module.scss
@@ -1,55 +1,45 @@
 .button {
-  font-size: clamp(calc(14rem / 16), calc(16vw / 7.68), 1rem);
+  font-size: 1rem;
   text-align: center;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   min-height: 2.75rem;
+  padding: 0.75rem 2.25rem;
   @media (max-width: 499px) {
     width: 100%;
   }
   &[data-theme='primary'] {
-    padding: 8px 32px;
     color: var(--neutral-700, #222);
     position: relative;
     z-index: 1;
-    background: var(--primary-500, #dbb039);
-    transition: background-color 0.3s;
+    background: linear-gradient(90deg, var(--primary-400, #dead26), var(--primary-500, #b18a1e));
+    background-size: 220% 100%;
+    background-position: 0% 0;
+    transition: background-position 500ms var(--easing, ease);
     &::before {
       content: '';
       position: absolute;
-      width: 30px;
-      height: 24px;
-      right: -1px;
-      bottom: -1px;
-      background-color: var(--neutral-700, #222);
+      width: 1.875rem;
+      height: 1.5rem;
+      right: -0.0625rem;
+      bottom: -0.0625rem;
+      background-color: var(--neutral-600, #252423);
       clip-path: polygon(100% 0, 0 100%, 100% 100%);
     }
     &:hover {
-      background: var(--primary-400, #f4cb5b);
-    }
-    &:active {
-      background: var(--primary-300, #ffe6a2);
+      background-position: 100% 0;
     }
   }
   &[data-theme='secondary'] {
-    padding: 8px 32px;
     box-shadow: inset 0px 0px 0px 1px var(--primary-300, #ffe6a2);
-    background-color: var(--neutral-700, #222);
+    background: linear-gradient(90deg, var(--neutral-600, #252423), var(--neutral-650, #2c2c2c));
+    background-size: 220% 100%;
+    background-position: 0% 0;
     color: var(--primary-300, #ffe6a2);
-    transition:
-      background-color 0.3s,
-      color 0.3s,
-      box-shadow 0.3s;
+    transition: background-position 500ms var(--easing, ease);
     &:hover {
-      box-shadow: inset 0px 0px 0px 1px var(--primary-400, #f4cb5b);
-      background-color: var(--neutral-650, #2c2c2c);
-      color: var(--primary-400, #f4cb5b);
-    }
-    &:active {
-      box-shadow: inset 0px 0px 0px 1px var(--primary-400, #f4cb5b);
-      background-color: var(--neutral-600, #3b3b3b);
-      color: var(--primary-400, #f4cb5b);
+      background-position: 100% 0;
     }
   }
 }
