--- a/apps/astro/src/components/ui/Input/Input.module.scss
+++ b/apps/astro/src/components/ui/Input/Input.module.scss
@@ -1,30 +1,27 @@
 [light-background] .Input {
-  color: var(--neutral-600, #3b3b3b);
+  color: var(--neutral-700, #0d0c0b);
 }
 
 .Input {
-  color: var(--neutral-300, #b8b8b8);
-  font-size: calc(12rem / 16);
-  line-height: 158%;
-  margin-bottom: calc(2rem / 16);
+  color: var(--neutral-000, #fcfcfc);
+  .label {
+    font-size: 0.875rem;
+    margin-bottom: 0.25rem;
+  }
   input,
   textarea {
     border: 1px solid var(--neutral-500, #6f6f6f);
-    background-color: var(--neutral-000, #fcfcfc);
-    padding: calc(8rem / 16) calc(12rem / 16);
+    background-color: var(--primary-100, #fbf6e9);
+    padding: 0.5rem 0.75rem;
     width: 100%;
-    color: var(--neutral-700, #222);
     transition: background-color 0.5s var(--easing);
     font-size: 1rem;
     &:hover {
-      background-color: var(--primary-100, #fbf6e9);
+      background-color: var(--primary-200, #fbf6e9);
     }
     &:focus-visible {
       outline: none;
-      background-color: var(--primary-100, #fbf6e9);
-    }
-    &:not(:placeholder-shown) {
-      background-color: var(--neutral-000, #fcfcfc);
+      background-color: var(--primary-200, #fbf6e9);
     }
     &[aria-invalid='true'] {
       border: 1px solid var(--error-500, #ff6a59);
