minor design changes

--- a/apps/astro/src/components/global/ContactForm/index.astro
+++ b/apps/astro/src/components/global/ContactForm/index.astro
@@ -95,7 +95,7 @@ const { index, sectionId, heading, review, email, tel } = Astro.props
 
 <style lang="scss">
   .ContactForm {
-    padding: clamp(calc(48rem / 16), calc(64vw / 7.68), calc(96rem / 16)) 0;
+    padding: clamp(5rem, calc(5vw / 0.48), 7rem) 0;
     position: relative;
     z-index: 1;
     &::before {
