--- a/apps/astro/src/components/global/Faq.astro
+++ b/apps/astro/src/components/global/Faq.astro
@@ -46,7 +46,7 @@ const { index, sectionId, heading, cta, items } = Astro.props
 
 <style lang="scss">
   .Faq {
-    padding: clamp(calc(64rem / 16), calc(96vw / 7.68), calc(96rem / 16)) 0;
+    padding: clamp(5rem, calc(5vw / 0.48), 7rem) 0;
     display: grid;
     gap: clamp(calc(42rem / 16), calc(48vw / 7.68), calc(48rem / 16))
       clamp(calc(48rem / 16), calc(64vw / 7.68), calc(64rem / 16));
