--- a/apps/astro/src/components/ui/Accordion.astro
+++ b/apps/astro/src/components/ui/Accordion.astro
@@ -36,9 +36,7 @@ const { summary, ...props } = Astro.props
     align-items: flex-start;
     .heading {
       max-width: calc(600rem / 16);
-      font-size: clamp(calc(24rem / 16), calc(28vw / 7.68), calc(28rem / 16));
-      font-weight: 600;
-      color: var(--neutral-100, #e6e6e6);
+      font-size:  clamp(1.25rem, calc(1.25vw / 0.48), 1.5rem);
     }
   }
   .icon {
