--- a/apps/astro/src/layouts/smooth-scroll.astro
+++ b/apps/astro/src/layouts/smooth-scroll.astro
@@ -15,7 +15,7 @@ import 'lenis/dist/lenis.css'
     anchor.addEventListener('click', function (e) {
       e.preventDefault()
       const target = document.querySelector<HTMLElement>(this.getAttribute('href')!)
-      target && lenis.scrollTo(target)
+      target && lenis.scrollTo(target, { offset: -72 })
     })
   })
 </script>
