--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -1,14 +1,18 @@
 ---
+import type { ComponentProps } from 'astro/types'
 import '@global/global.scss'
 import { LOCALE } from '@global/constants'
 import Head, { type Props as HeadProps } from './Head.astro'
 import CookieConsent from '@components/global/CookieConsent.astro'
+import Header from '@components/global/Header.astro'
 import Footer from '@components/global/Footer.astro'
 import SmoothScroll from '@layouts/smooth-scroll.astro'
 
-type Props = HeadProps
+type Props = HeadProps & {
+  nav_cta: ComponentProps<typeof Header>['nav_cta']
+}
 
-const { ...props } = Astro.props
+const { nav_cta, ...props } = Astro.props
 ---
 
 <!doctype html>
@@ -18,6 +22,7 @@ const { ...props } = Astro.props
   </head>
   <body>
     <CookieConsent />
+    {nav_cta && <Header nav_cta={nav_cta} />}
     <main id="main">
       <slot />
     </main>
