--- a/apps/astro/src/components/global/Header.astro
+++ b/apps/astro/src/components/global/Header.astro
@@ -20,7 +20,7 @@ const { nav_cta } = Astro.props
           </path>
         </svg>
       </a>
-      <Button {...nav_cta} className="cta" />
+      <Button {...nav_cta} className="cta" data-track-header-cta />
     </nav>
   </div>
 </header>
