--- a/apps/astro/src/components/global/CookieConsent.astro
+++ b/apps/astro/src/components/global/CookieConsent.astro
@@ -1,19 +1,17 @@
 ---
+import sanityFetch from '@utils/sanity.fetch'
 import Switch from '@components/ui/Switch.astro'
 import Button from '@components/ui/Button'
 
-const GTM_CONTAINER_ID = 'GTM-KDTPBM4N'
+const gtmId = await sanityFetch<{ gtmId: string }>({
+  query: `*[_type == "global"][0].analytics.gtmId`,
+})
 
 const groups = [
   {
     id: 'necessary',
     name: 'Niezbędne',
     description: `Niezbędne pliki cookie pomagają uczynić naszą stronę użyteczną, umożliwiając działanie podstawowych funkcji, takich jak nawigacja po stronie internetowej czy dostęp do bezpiecznych obszarów strony. Bez tych plików cookie niektóre podstawowe funkcje strony nie będą działać prawidłowo.`,
-  },
-  {
-    id: 'marketing',
-    name: 'Marketingowe',
-    description: `Pliki cookie marketingowe są używane do śledzenia odwiedzających na stronach internetowych. Ich celem jest wyświetlanie reklam, które są istotne i interesujące dla indywidualnych użytkowników, a tym samym bardziej wartościowe dla wydawców i zewnętrznych reklamodawców.`,
   },
   {
     id: 'analytics',
@@ -25,17 +23,40 @@ const groups = [
     name: 'Preferencyjne',
     description: `Pliki cookie preferencyjne pozwalają stronie internetowej zapamiętywać informacje, które zmieniają sposób, w jaki strona się zachowuje lub wygląda, takie jak preferowany język lub region, w którym się znajdujesz.`,
   },
+  {
+    id: 'marketing',
+    name: 'Marketingowe',
+    description: `Pliki cookie marketingowe są używane do śledzenia odwiedzających na stronach internetowych. Ich celem jest wyświetlanie reklam, które są istotne i interesujące dla indywidualnych użytkowników, a tym samym bardziej wartościowe dla wydawców i zewnętrznych reklamodawców.`,
+    subGroups: [
+      {
+        id: 'conversion_api',
+        name: 'API Konwersji (Facebook)',
+        description:
+          'Pozwala na przesyłanie danych o konwersjach bezpośrednio do platform reklamowych w celu poprawy skuteczności reklam i lepszego mierzenia ich efektywności.',
+      },
+      {
+        id: 'advanced_matching',
+        name: 'Zaawansowane Dopasowanie (Facebook)',
+        description:
+          'Umożliwia lepsze dopasowanie użytkowników do ich działań na stronie, co pomaga w dokładniejszym targetowaniu reklam i analizie ich skuteczności.',
+      },
+    ],
+  },
 ]
 ---
 
-<noscript>
-  <iframe
-    src={`https://www.googletagmanager.com/ns.html?id=${GTM_CONTAINER_ID}`}
-    height="0"
-    width="0"
-    style="display:none;visibility:hidden;">
-  </iframe>
-</noscript>
+{
+  gtmId && (
+    <noscript>
+      <iframe
+        src={`https://www.googletagmanager.com/ns.html?id=${gtmId}`}
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden;"
+      />
+    </noscript>
+  )
+}
 <aside class="cookie-consent" aria-hidden="true">
   <section class="content">
     <header class="header">
@@ -57,83 +78,117 @@ const groups = [
     </header>
     <div class="settings" style="display: none" data-lenis-prevent>
       {
-        groups.map(({ id, name, description }) => (
-          <label for={id} data-group={id} style={{ ...(id === 'necessary' && { cursor: 'not-allowed' }) }}>
-            <Switch
-              {...(id === 'necessary' && {
-                style: { cursor: 'not-allowed' },
-              })}
-              inputProps={{
-                id,
-                ...(id === 'necessary' && {
-                  disabled: true,
-                  checked: true,
-                }),
-              }}
-              class="switch"
-            />
-            <p>{name}</p>
-            <p class="description">{description}</p>
-          </label>
+        groups.map(({ id, name, description, subGroups }) => (
+          <div class="group" data-group={id}>
+            <label for={id} style={{ ...(id === 'necessary' && { cursor: 'not-allowed' }) }}>
+              <Switch
+                {...(id === 'necessary' && {
+                  style: { cursor: 'not-allowed' },
+                })}
+                inputProps={{
+                  id,
+                  ...(id === 'necessary' && {
+                    disabled: true,
+                    checked: true,
+                  }),
+                }}
+                class="switch"
+              />
+              <p>{name}</p>
+              <p class="description">{description}</p>
+            </label>
+            {subGroups && (
+              <div class="sub-groups">
+                {subGroups.map((subGroup) => (
+                  <label for={subGroup.id} class="sub-group">
+                    <Switch
+                      inputProps={{
+                        id: subGroup.id,
+                        'data-parent': id,
+                      }}
+                      class="switch"
+                    />
+                    <p>{subGroup.name}</p>
+                    <p class="description">{subGroup.description}</p>
+                  </label>
+                ))}
+              </div>
+            )}
+          </div>
         ))
       }
     </div>
     <div class="actions">
-      <Button className="agree">Zgoda na wszystkie</Button>
-      <Button className="setPreferences" theme="secondary">Ustaw preferencje</Button>
-      <Button className="deny" theme="secondary">Odmowa</Button>
+      <Button className="agree" theme="primary"> Zgoda na wszystkie </Button>
+      <Button className="setPreferences" theme="secondary"> Ustaw preferencje </Button>
+      <Button className="deny" theme="secondary"> Odmowa </Button>
     </div>
   </section>
 </aside>
 
 <style lang="scss">
-  .cookie-consent {
-    padding: clamp(calc(16rem / 16), calc(24vw / 7.68), calc(32rem / 16)) var(--page-margin);
-    &[aria-hidden='true'] {
-      display: none;
+  :global(html) {
+    &:has(.cookie-consent[aria-hidden='false']) {
+      overflow: hidden;
     }
-    z-index: 10;
+  }
+  $padding: clamp(1rem, calc(1.5vw / 0.48), 1.5rem);
+  .cookie-consent {
+    padding: $padding var(--page-margin);
+    z-index: 11;
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
-    background: rgba(37, 37, 37, 0.2);
+    background: rgba(0, 0, 0, 0.34);
     backdrop-filter: blur(4px);
     display: grid;
     place-items: center;
+    &[aria-hidden='true'] {
+      display: none;
+    }
   }
   .content {
-    max-height: calc(100vh - clamp(calc(16rem / 16), calc(24vw / 7.68), calc(32rem / 16)) * 2);
-    max-height: calc(100dvh - clamp(calc(16rem / 16), calc(24vw / 7.68), calc(32rem / 16)) * 2);
-    padding: clamp(calc(16rem / 16), calc(24vw / 7.68), calc(32rem / 16));
-    border: 1px solid var(--neutral-600, #3b3b3b);
-    background: var(--neutral-700, #222);
-    max-width: calc(794rem / 16);
+    padding: $padding;
+    max-height: calc(100vh - $padding * 2);
+    max-height: calc(100dvh - $padding * 2);
+    border: 1px solid var(--primary-200, #e6dbd1);
+    background-color: var(--primary-100, #f2ede8);
+    max-width: 48rem;
     display: flex;
     flex-direction: column;
-    gap: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(32rem / 16));
+    gap: clamp(1.5rem, calc(2rem / 0.48), 2rem);
     .heading {
-      font-size: clamp(calc(18rem / 16), calc(24vw / 7.68), calc(28rem / 16));
-      margin-bottom: clamp(calc(12rem / 16), calc(16vw / 7.68), calc(16rem / 16));
+      font-size: clamp(1.125rem, calc(1.5vw / 0.48), 1.75rem);
+      margin-bottom: clamp(0.75rem, calc(1.25vw / 0.48), 1.25rem);
     }
     .settings {
       display: flex;
       flex-direction: column;
-      gap: clamp(12px, calc(20vw / 7.68), 20px);
+      gap: clamp(0.75rem, calc(1.25vw / 0.48), 1.25rem);
       overflow-y: auto;
       overscroll-behavior: contain;
+      .sub-groups {
+        display: flex;
+        flex-direction: column;
+        padding-left: 1.5rem;
+        padding-top: 1.5rem;
+        gap: clamp(0.75rem, calc(1.25vw / 0.48), 1.25rem);
+        position: relative;
+        border-left: 1px solid var(--primary-200, #e6dbd1);
+      }
       label {
         display: grid;
         grid-template-columns: auto 1fr;
-        gap: 4px clamp(calc(16rem / 16), calc(24vw / 7.68), calc(24rem / 16));
+        gap: 0.25rem clamp(1rem, calc(1.5vw / 0.48), 1.5rem);
         .switch {
           position: sticky;
           top: 0;
           grid-row: 1 / span 2;
         }
         .description {
-          font-size: 0.875em;
+          font-size: 0.875rem;
         }
       }
     }
@@ -142,26 +197,27 @@ const groups = [
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: calc(12rem / 16);
-    button:first-child {
-      margin-right: auto;
+    gap: 0.75rem;
+    button:last-child {
+      margin-left: auto;
     }
-    @media (max-width: 709px) {
+    @media (max-width: 43rem) {
       button {
         width: 100%;
-        &:first-child {
-          margin-bottom: calc(12rem / 16);
+        &:last-child {
+          margin-top: 0.75rem;
         }
       }
     }
   }
 </style>
 
-<script is:inline define:vars={{ GTM_CONTAINER_ID }}>
+<script is:inline define:vars={{ gtmId }}>
   window.dataLayer = window.dataLayer || []
   function gtag() {
     window.dataLayer.push(arguments)
   }
+
   function getCookie(name) {
     const cookies = document.cookie.split(';').map((cookie) => cookie.trim())
     const cookie = cookies.find((cookie) => cookie.startsWith(`${name}=`))
@@ -172,6 +228,7 @@ const groups = [
     const expires = days ? `; expires=${date.toUTCString()}` : ''
     document.cookie = `${name}=${encodeURIComponent(value)}${expires}; SameSite=Strict`
   }
+
   function setConsent(consent) {
     const consentMode = {
       functionality_storage: consent.necessary ? 'granted' : 'denied',
@@ -181,10 +238,39 @@ const groups = [
       ad_personalization: consent.marketing ? 'granted' : 'denied',
       analytics_storage: consent.analytics ? 'granted' : 'denied',
       personalization_storage: consent.preferences ? 'granted' : 'denied',
+      conversion_api: consent.conversion_api ? 'granted' : 'denied',
+      advanced_matching: consent.advanced_matching ? 'granted' : 'denied',
     }
     gtag('consent', 'update', consentMode)
     setCookie('cookie-consent', JSON.stringify(consentMode), 90)
+
+    const focusedElement = document.activeElement
+    if (focusedElement && cookieConsentElement.contains(focusedElement)) {
+      focusedElement.blur()
+    }
+
+    cookieConsentElement.style.display = 'none'
+    cookieConsentElement.setAttribute('aria-hidden', 'true')
   }
+
+  const cookieConsentElement = document.querySelector('.cookie-consent')
+  const acceptAllButton = cookieConsentElement.querySelector('.agree')
+  const preferencesButton = cookieConsentElement.querySelector('.setPreferences')
+  const denyButton = cookieConsentElement.querySelector('.deny')
+  let isPreferencesOpen = false
+
+  // Initialize GTM
+  ;(function (w, d, s, l, i) {
+    w[l] = w[l] || []
+    w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+    var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s),
+      dl = l != 'dataLayer' ? '&l=' + l : ''
+    j.async = true
+    j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+    f.parentNode.insertBefore(j, f)
+  })(window, document, 'script', 'dataLayer', gtmId)
+
   if (getCookie('cookie-consent') === null) {
     gtag('consent', 'default', {
       functionality_storage: 'denied',
@@ -194,56 +280,72 @@ const groups = [
       ad_personalization: 'denied',
       analytics_storage: 'denied',
       personalization_storage: 'denied',
+      conversion_api: 'denied',
+      advanced_matching: 'denied',
     })
-    document.querySelector('.cookie-consent').setAttribute('aria-hidden', 'false')
+    cookieConsentElement.setAttribute('aria-hidden', 'false')
   } else {
     gtag('consent', 'default', JSON.parse(getCookie('cookie-consent')))
   }
 
-  // prettier-ignore
-  ;(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer',GTM_CONTAINER_ID);
-
-  const $this = document.querySelector('.cookie-consent')
-  const $agree = $this.querySelector('.agree')
-  const $setPreferences = $this.querySelector('.setPreferences')
-  const $deny = $this.querySelector('.deny')
-  $agree.addEventListener('click', () => {
+  acceptAllButton.addEventListener('click', () => {
     setConsent({
       necessary: true,
       marketing: true,
       analytics: true,
       preferences: true,
+      conversion_api: true,
+      advanced_matching: true,
     })
-    $this.setAttribute('aria-hidden', 'true')
   })
-  let setsPreferences = false
-  $setPreferences.addEventListener('click', () => {
-    if (!setsPreferences) {
-      $this.querySelector('.header [data-header-initial]').style.display = 'none'
-      $this.querySelector('.header [data-header-settings]').style.removeProperty('display')
-      $this.querySelector('.settings').style.removeProperty('display')
-      setsPreferences = true
+
+  preferencesButton.addEventListener('click', () => {
+    if (!isPreferencesOpen) {
+      cookieConsentElement.querySelector('.header [data-header-initial]').style.display = 'none'
+      cookieConsentElement.querySelector('.header [data-header-settings]').style.removeProperty('display')
+      cookieConsentElement.querySelector('.settings').style.removeProperty('display')
+      isPreferencesOpen = true
     } else {
-      $this.setAttribute('aria-hidden', 'true')
       setConsent({
-        necessary: $this.querySelector('input[id="necessary"]').checked,
-        marketing: $this.querySelector('input[id="marketing"]').checked,
-        analytics: $this.querySelector('input[id="analytics"]').checked,
-        preferences: $this.querySelector('input[id="preferences"]').checked,
+        necessary: cookieConsentElement.querySelector('input[id="necessary"]').checked,
+        marketing: cookieConsentElement.querySelector('input[id="marketing"]').checked,
+        analytics: cookieConsentElement.querySelector('input[id="analytics"]').checked,
+        preferences: cookieConsentElement.querySelector('input[id="preferences"]').checked,
+        conversion_api: cookieConsentElement.querySelector('input[id="conversion_api"]').checked,
+        advanced_matching: cookieConsentElement.querySelector('input[id="advanced_matching"]').checked,
       })
     }
   })
-  $deny.addEventListener('click', () => {
-    $this.setAttribute('aria-hidden', 'true')
+
+  denyButton.addEventListener('click', () => {
     setConsent({
       necessary: false,
       marketing: false,
       analytics: false,
       preferences: false,
+      conversion_api: false,
+      advanced_matching: false,
+    })
+  })
+
+  const marketingSwitch = cookieConsentElement.querySelector('input[id="marketing"]')
+  const subSwitches = cookieConsentElement.querySelectorAll('.sub-groups input[type="checkbox"]')
+
+  let isMarketingSwitchTriggered = false
+
+  marketingSwitch.addEventListener('change', (e) => {
+    isMarketingSwitchTriggered = true
+    subSwitches.forEach((subSwitch) => {
+      subSwitch.checked = e.target.checked
+    })
+    isMarketingSwitchTriggered = false
+  })
+
+  subSwitches.forEach((subSwitch) => {
+    subSwitch.addEventListener('change', (e) => {
+      if (!isMarketingSwitchTriggered && e.target.checked) {
+        marketingSwitch.checked = true
+      }
     })
   })
 </script>
